# parquet-peek

./: .pre-commit-config.yaml  README.md  parquet-peek  parquet.py  pyproject.toml  pyproject.toml.bak
.github/workflows/: ci.yaml
src/parquet_peek/: __init__.py
