[project]
name = "parquet-peek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adlfs>=2024.7.0",
    "fsspec>=2024.9.0",
    "gcsfs>=2024.9.0.post1",
    "polars>=1.9.0",
    "rich-click>=1.8.3",
    "s3fs>=2024.9.0",
]
